Rename room to seller in frontend

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -8,7 +8,7 @@
       "entities": {
         "main": "Entities",
         "sellerPlan": "Seller Plan",
-        "room": "Room",
+        "seller": "Seller",
         "contact": "Contact",
         "category": "Category",
         "product": "Product",
