--- a/src/main/webapp/i18n/en/seller.json
+++ b/src/main/webapp/i18n/en/seller.json
@@ -1,21 +1,21 @@
 {
   "busifrogApp": {
-    "room": {
+    "seller": {
       "home": {
-        "title": "Rooms",
+        "title": "Sellers",
         "refreshListLabel": "Refresh list",
-        "createLabel": "Create a new Room",
-        "createOrEditLabel": "Create or edit a Room",
-        "notFound": "No Rooms found"
+        "createLabel": "Create a new Seller",
+        "createOrEditLabel": "Create or edit a Seller",
+        "notFound": "No Sellers found"
       },
-      "created": "A new Room is created with identifier {{ param }}",
-      "updated": "A Room is updated with identifier {{ param }}",
-      "deleted": "A Room is deleted with identifier {{ param }}",
+      "created": "A new Seller is created with identifier {{ param }}",
+      "updated": "A Seller is updated with identifier {{ param }}",
+      "deleted": "A Seller is deleted with identifier {{ param }}",
       "delete": {
-        "question": "Are you sure you want to delete Room {{ id }}?"
+        "question": "Are you sure you want to delete Seller {{ id }}?"
       },
       "detail": {
-        "title": "Room"
+        "title": "Seller"
       },
       "id": "ID",
       "name": "Name",
