--- a/src/main/webapp/i18n/en/contact.json
+++ b/src/main/webapp/i18n/en/contact.json
@@ -33,7 +33,7 @@
       "createdBy": "Created By",
       "lastModifiedBy": "Last Modified By",
       "isDeleted": "Is Deleted",
-      "room": "Room"
+      "seller": "Seller"
     }
   }
 }
