--- a/src/main/webapp/i18n/hi/product.json
+++ b/src/main/webapp/i18n/hi/product.json
@@ -31,7 +31,7 @@
       "lastModifiedBy": "Last Modified By",
       "isDeleted": "Is Deleted",
       "category": "Category",
-      "room": "Room"
+      "seller": "Seller"
     }
   }
 }
