--- a/src/main/webapp/i18n/hi/sellerStatus.json
+++ b/src/main/webapp/i18n/hi/sellerStatus.json
@@ -1,6 +1,6 @@
 {
   "busifrogApp": {
-    "RoomStatus": {
+    "SellerStatus": {
       "null": "",
       "INACTIVE": "INACTIVE",
       "VERIFIED": "VERIFIED"
