--- a/src/main/webapp/i18n/hi/service.json
+++ b/src/main/webapp/i18n/hi/service.json
@@ -30,7 +30,7 @@
       "lastModifiedBy": "Last Modified By",
       "isDeleted": "Is Deleted",
       "category": "Category",
-      "room": "Room"
+      "seller": "Seller"
     }
   }
 }
