--- a/src/main/webapp/i18n/hi/userVisit.json
+++ b/src/main/webapp/i18n/hi/userVisit.json
@@ -25,7 +25,7 @@
       "createdBy": "Created By",
       "lastModifiedBy": "Last Modified By",
       "isDeleted": "Is Deleted",
-      "room": "Room"
+      "seller": "Seller"
     }
   }
 }
